[gd_scene load_steps=2 format=2]

[ext_resource path="res://EPixel_Main.gd" type="Script" id=1]

[node name="EPixel_Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIBackground" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ImageBackground" type="ColorRect" parent="UIBackground"]
margin_left = 256.0
margin_top = 88.0
margin_right = 768.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBarBackground" type="ColorRect" parent="UIBackground"]
margin_top = 88.0
margin_right = 256.0
margin_bottom = 600.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorsLabel" type="Label" parent="UIBackground/LeftBarBackground"]
margin_top = 20.0
margin_right = 256.0
margin_bottom = 34.0
text = "Colors"
align = 1

[node name="PaletteLabel" type="Label" parent="UIBackground/LeftBarBackground"]
margin_top = 80.0
margin_right = 256.0
margin_bottom = 94.0
text = "Palette"
align = 1

[node name="RightBarBackground" type="ColorRect" parent="UIBackground"]
margin_left = 768.0
margin_top = 88.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBarBackground" type="ColorRect" parent="UIBackground"]
margin_right = 1024.0
margin_bottom = 88.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Version Label" type="Label" parent="UIBackground/TopBarBackground"]
margin_left = 10.0
margin_top = 10.0
margin_right = 126.0
margin_bottom = 41.0
text = "EPixel v0.2a Alpha
By jhonnystene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIBackground/TopBarBackground"]
margin_right = 1024.0
margin_bottom = 14.0
text = "+=+=+= WARNING: No support for image export. Your image will not be able to be used in other programs! =+=+=+"
align = 1

[node name="SaveLoadMenu" type="Control" parent="."]
margin_left = 10.0
margin_top = 42.0
margin_right = 246.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="SaveLoadMenu"]
margin_top = 6.0
margin_right = 64.0
margin_bottom = 38.0
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="SaveLoadMenu"]
margin_left = 220.0
margin_top = 6.0
margin_right = 284.0
margin_bottom = 38.0
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="SaveLoadMenu"]
margin_left = 72.0
margin_top = 6.0
margin_right = 136.0
margin_bottom = 38.0
text = "Save"

[node name="SaveAsButton" type="Button" parent="SaveLoadMenu"]
margin_left = 146.0
margin_top = 6.0
margin_right = 210.0
margin_bottom = 38.0
text = "Save As"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="SaveLoadMenu"]
margin_right = 600.0
margin_bottom = 300.0

[node name="ImageEditor" type="Control" parent="."]
margin_left = 256.0
margin_top = 88.0
margin_right = 768.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="Control" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteButtons" type="Control" parent="."]
margin_top = 192.0
margin_right = 256.0
margin_bottom = 232.0

[node name="TIPaletteButton" type="Button" parent="PaletteButtons"]
margin_left = 32.0
margin_right = 224.0
margin_bottom = 20.0
text = "TI-84 Plus CE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win16PaletteButton" type="Button" parent="PaletteButtons"]
margin_left = 32.0
margin_top = 30.0
margin_right = 224.0
margin_bottom = 50.0
text = "Windows 4-bit Color"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SaveLoadMenu/OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="SaveLoadMenu/NewButton" to="." method="newImage"]
[connection signal="pressed" from="SaveLoadMenu/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="SaveLoadMenu/SaveAsButton" to="." method="_on_SaveAsButton_pressed"]
[connection signal="file_selected" from="SaveLoadMenu/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="PaletteButtons/TIPaletteButton" to="." method="_on_TIPaletteButton_pressed"]
[connection signal="pressed" from="PaletteButtons/Win16PaletteButton" to="." method="_on_Win16PaletteButton_pressed"]
